solution1.